# python-oeis

./: .pylintrc  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pylint.yml
docs/: conf.py  index.rst
oeis/: __init__.py  sequence.py
tests/: test_search.py  test_sequence.py
