[tool.poetry]
name = "python-oeis"
version = "1.0.0"
description = "A basic API wrapper for OEIS."
authors = ["Infiniticity <omkaar.nerurkar@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Infiniticity/python-oeis/"
documentation = "https://oeis.readthedocs.io/"
keywords = ["python", "oeis"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = ["oeis"]

[tool.poetry.dependencies]
requests = "2.27.*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Infiniticity/python-oeis/issues"
